<resources>
    <string name="app_name">হৃদয়ে ৭১</string>
    <string name="muktider_itihas">মুক্তিযুদ্ধের ইতিহাস </string>
    <string name="mujibmuktijuddo">মুজিব ও মুক্তিযুদ্ধ</string>
    <string name="ekattorercobi">৭১- এর ছবি</string>
    <string name="ekattorervideo">৭১- এর ভিডিও</string>
    <string name="crackplaton">ক্র্যাক প্লাটুনঃ</string>




    <string name="description"></string>

    <string name="year">দায়িত্বকাল</string>
    <string name="location">সেক্টর</string>
    <string name="sector_title">সেক্টর কমান্ডার</string>

    <string name="introduction">পরিচিতি</string>
    <string name="educational_life">শিক্ষাজীবন</string>
    <string name="political_life">রাজনীতি</string>
    <string name="declaration_of_independence">স্বাধীনতার_ঘোষণা</string>
    <string name="confinement">কারাবরণ</string>
    <string name="adjuration">শপথ_গ্রহণ</string>
    <string name="death">মৃত্যু</string>
    <string name="biography">আত্মজীবনীমূলক_বই</string>
    <string name="Purbo_itihash">মুক্তিযুদ্ধের পূর্ব ইতিহাস</string>
    <string name="Muktijuddher_itihash">মুক্তিযুদ্ধের ইতিহাস</string>
    <string name="fiftyTwo">১৯৫২</string>
    <string name="sixtySix">১৯৬৬</string>
    <string name="sixtyNine">১৯৬৯</string>
    <string name="Boishommo">বৈষম্য</string>

    <string-array name="string_array_পরিচিতি">
        <item>
            শেখ মুজিবুর রহমান (বাঙালি: শেখ মুজিবুর রহমান; ১ মার্চ ১৯২০-১৫ আগস্ট ১৯৭৫) শেখ মুজিব বা খালি মুজিবের সংক্ষিপ্ত হয়ে একজন বাংলাদেশী রাজনীতিবিদ ও রাজনীতিবিদ ছিলেন তাঁকে প্রায়শই বাঙালি জাতির জনক বলা হয়। তিনি বাংলাদেশের প্রথম রাষ্ট্রপতি এবং পরবর্তীতে ১৯৭৫ সালের ১৫ ই আগস্ট পর্যন্ত তাঁর হত্যার আগ পর্যন্ত বাংলাদেশের প্রধানমন্ত্রী হিসাবে দায়িত্ব পালন করেন তিনি বাংলাদেশের স্বাধীনতার পেছনে চালিকা শক্তি হিসাবে বিবেচিত হন তিনি বাংলাদেশের জনগণের কাছে "বঙ্গবন্ধু" (বঙ্গবন্ধু "বাংলার বন্ধু") উপাধিতে জনপ্রিয় তিনি ১৯৬৯ সালে পাকিস্তানের পূর্ব পাকিস্তান ভিত্তিক রাজনৈতিক দল হিসাবে প্রতিষ্ঠিত আওয়ামী লীগের শীর্ষস্থানীয় ব্যক্তিত্ব এবং অবশেষে আওয়ামী লীগের নেতা হয়ে ওঠেন পূর্ব পাকিস্তানের রাজনৈতিক স্বায়ত্তশাসন অর্জনের প্রয়াস এবং পরবর্তীতে ১৯৭১ সালে বাংলাদেশ মুক্তি আন্দোলন এবং বাংলাদেশ মুক্তিযুদ্ধের পেছনের কেন্দ্রীয় ব্যক্তিত্ব হিসাবে মুজিবকে অন্যতম গুরুত্বপূর্ণ ব্যক্তিত্ব হিসাবে কৃতিত্ব দেওয়া হয় সুতরাং, তাকে "জাতির জনক" বা "জাতির পিতা" হিসাবে গণ্য করা হয় ( জাতির জাণোক বা জাতির পিতা, উভয়টির অর্থ "জাতির পিতা") তাঁর কন্যা শেখ হাসিনা আওয়ামী লীগের বর্তমান নেতা এবং বাংলাদেশের প্রধানমন্ত্রী
    </item>
    </string-array>

    <string-array name="string_array_শিক্ষাজীবন">
        <item>(১৯২০-১৯৭৫)  জাতির জনক এবং বাংলাদেশের প্রথম রাষ্ট্রপতি (২৬ মার্চ ১৯৭১ থেকে ১১ জানুয়ারি ১৯৭২)। শেখ মুজিবুর রহমান ফরিদপুর জেলার গোপালগঞ্জ মহকুমার টুঙ্গীপাড়া গ্রামে ১৯২০ সালের ১৭ মার্চ জন্মগ্রহণ করেন। তাঁর পিতা শেখ লুৎফর রহমান ছিলেন গোপালগঞ্জ দেওয়ানি আদালতের সেরেস্তাদার। মুজিব ছয় ভাই-বোনের মধ্যে তৃতীয় ছিলেন। তিনি স্থানীয় গীমাডাঙ্গা স্কুলে প্রাথমিক শিক্ষা লাভ করেন। চোখের সমস্যার কারণে তাঁর প্রাথমিক শিক্ষা চার বছর ব্যাহত হয়। ১৯৪২ সালে তিনি গোপালগঞ্জ মিশনারী স্কুল থেকে ম্যাট্রিক, ১৯৪৪ সালে কলকাতার ইসলামিয়া কলেজ থেকে আই.এ এবং একই কলেজ থেকে ১৯৪৭ সালে বি.এ পাশ করেন।
স্কুল জীবন থেকেই মুজিবের মধ্যে নেতৃত্বের গুণাবলীর বিকাশ ঘটে। তিনি যখন গোপালগঞ্জ মিশনারী স্কুলের ছাত্র সে সময় একবার বাংলার মুখ্যমন্ত্রী এ.কে ফজলুল হক ঐ স্কুল পরিদর্শনে আসেন (১৯৩৯)। শোনা যায়, ঐ অঞ্চলের অনুন্নত অবস্থার প্রতি মুখ্যমন্ত্রীর দৃষ্টি আকর্ষণের জন্য তরুণ মুজিব বিক্ষোভ সংগঠিত করেন। ম্যাট্রিক পাশের পর মুজিব কলকাতায় গিয়ে ইসলামিয়া কলেজে ভর্তি হন। সেখান থেকেই তিনি আই.এ ও বি.এ পাশ করেন। ১৯৪৬ সালে তিনি ইসলামিয়া কলেজ ছাত্র-সংসদের সাধারণ সম্পাদক নির্বাচিত হন। তিনি বঙ্গীয় প্রাদেশিক মুসলিম লীগের একজন সক্রিয় কর্মী এবং ১৯৪৩ সাল থেকে নিখিল ভারত মুসলিম লীগ কাউন্সিলের সদস্য ছিলেন। রাজনীতিতে তিনি ছিলেন এইচ. এস সোহরাওয়ার্দীর একজন একনিষ্ঠ অনুসারী। ১৯৪৬ সালের সাধারণ নির্বাচনে মুসলিম লীগ শেখ মুজিবকে ফরিদপুর জেলায় দলীয় প্রার্থীদের পক্ষে নির্বাচনী প্রচারণার দায়িত্ব অপর্ণ করে।
ভারত বিভাগের (১৯৪৭) পর তিনি ঢাকা বিশ্ববিদ্যালয়ে আইন অধ্যয়নের জন্য ভর্তি হন। তবে পড়াশুনা শেষ করতে পারেন নি। কারণ চতুর্থ শ্রেণির কর্মচারীদের ন্যায্য দাবি দাওয়ার প্রতি বিশ্ববিদ্যালয় কর্তৃপক্ষের ঔদাসীন্যের বিরুদ্ধে তাদের বিক্ষোভ প্রদর্শনে উস্কানি দেওয়ার অভিযোগে তাঁকে ১৯৪৯ সালের প্রথমদিকে বিশ্ববিদ্যালয় থেকে বহিস্কার করা হয়।
        </item>

    </string-array>

    <string-array name="string_array_রাজনীতি">
        <item>রাজনীতি</item>
        <item>রাজনীতি</item>
        <item>রাজনীতি</item>
    </string-array>

    <string-array name="string_array_স্বাধীনতার_ঘোষণা">
        <item>স্বাধীনতার_ঘোষণা</item>
        <item>স্বাধীনতার_ঘোষণা</item>
        <item>স্বাধীনতার_ঘোষণা</item>
    </string-array>

    <string-array name="string_array_কারাবরণ">
        <item>কারাবরণ</item>
        <item>কারাবরণ</item>
        <item>কারাবরণ</item>
    </string-array>

    <string-array name="string_array_শপথ_গ্রহণ">
        <item>শপথ_গ্রহণ</item>
        <item>শপথ_গ্রহণ</item>
        <item>শপথ_গ্রহণ</item>
    </string-array>

    <string-array name="string_array_মৃত্যু">
        <item>মৃত্যু</item>
        <item>মৃত্যু</item>
        <item>মৃত্যু</item>
    </string-array>

    <string-array name="string_array_আত্মজীবনীমূলক_বই">
        <item>আত্মজীবনীমূলক_বই</item>
        <item>আত্মজীবনীমূলক_বই</item>
        <item>আত্মজীবনীমূলক_বই</item>
    </string-array>


</resources>
