<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/jhuddo">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/newimage1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:weightSum="4">


                <androidx.cardview.widget.CardView
                    android:id="@+id/muktijuddoID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/muktider_itihas"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/mujibID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/mujibmuktijuddo"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ekkatorercobiID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/ekattorercobi"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ekkatorervideoID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/ekattorervideo"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>