<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Purbo_itihash"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/app_bar_layout"
            android:id="@+id/purbo_itihash_toolbar"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/purbo_itihas_img"
                android:scaleType="fitXY"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/newimage1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:weightSum="4">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:id="@+id/baonnoID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/fiftyTwo"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>




                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:id="@+id/chesottiID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/sixtySix"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:id="@+id/unosotturID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/sixtyNine"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <Button
                        android:id="@+id/boisommoID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/Boishommo"
                        android:textAllCaps="false"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>



</LinearLayout>